@@ -1,11 +1,5 @@
-DIST samplv1-0.3.6.tar.gz 197373 SHA256 3e2bc3609433e6ebfed3a49573d799c888f9ffadefa8407688e8825b074ffeb9 SHA512 d215467e3f16300208275afabbbe3c6d9477958b7791208a2b3ef6385e822a3cd2a163331c3c810584a9573e50560d5304416af656fba5453243e1ed6fd03f26 WHIRLPOOL cecb43cdaf2ce9430fd5a52cb51e1c2446ee74f805ceb7179f9ff3ef2b6297f36ec16089015facf74930ce6dc52e095feae4d595c1a1dfe7d4a86af58ca37f51
-DIST samplv1-0.4.0.tar.gz 201724 SHA256 28e6b162d256cd48d3398d66fd85fe5662d50ed8be44d2f867a900522f6f7413 SHA512 4c24e30e3d39de8f90a311a30ee2d655a13c35375e28be5d33a41c2c1128f19d585492c96645df0987cbf783b2b477f5793b9a407975332c21d6f478e1fc7842 WHIRLPOOL 7edeec7ec644f4071b7ad2c2046b41062faf7b5ec864f1b95cac7f4fca776979bd6a8c8ec829f34fec9bb8b0c3f4c839b6a14105314072c48de18a95955b906d
-DIST samplv1-0.4.1.tar.gz 203444 SHA256 dde4ecacbb2c445143a6515f8fefc3d242bd46c1183e8d45f595b7bc93c6a3b3 SHA512 f0345b610e25df6303590c378bfcf29051fb463f66226b7dc4ea727582f5f3e09e2bc1ff4158fd84f836c1357a2db400272a11b388231629ad3d4b44207f69ea WHIRLPOOL 6944c78952a98ceccb8b1f56d04a1708616a3eab11d2b66c904e7218df3e18163201c34703cdd421c9ea2833d641aafa8a12b5c57ff838e40003ea412c137d97
-DIST samplv1-0.5.1.tar.gz 209202 SHA256 9e9b873ebcb2ec871f91691428163d25d04e019912fab510d4c762dfdfc1b894 SHA512 3e4253247bcf01960eee710abd870c11aea79d6626ffefeb9004f204b1ebc415a8d0f126b660fe3d57667efd6e7948526409f08fa6d8ff6907189ba2e46d8296 WHIRLPOOL 050afea35d9361fc38b93658022c46587846c81ae277902830f8d0288984f3f036e53d737029f892926258eadc42af46d9d6ee9f2a0ce5e4be17127cc75f36b0
-EBUILD samplv1-0.3.6.ebuild 1748 SHA256 0240fa24c8b1efeeb189662ccfbfaeb2d3fd34d2a632953e0f1e05989e2e7f64 SHA512 8b838bac63cbf634994b492fb96e3164e7216d62adfd4c7ed41af1d5bf3a6a04e5ce102324f29cfd13a9abd458d2248200c3cad871cda07a52976677e74694a9 WHIRLPOOL f97a2d38023a8f2a14bfdedad0bc0c1c7d7172ff8dbb4a5b483e3d78c72322f2ad0ec57dffb1898cf5aa5002659e70dd49722a20f86ff4e1c2b825e9c52bd28e
-EBUILD samplv1-0.4.0.ebuild 1748 SHA256 0240fa24c8b1efeeb189662ccfbfaeb2d3fd34d2a632953e0f1e05989e2e7f64 SHA512 8b838bac63cbf634994b492fb96e3164e7216d62adfd4c7ed41af1d5bf3a6a04e5ce102324f29cfd13a9abd458d2248200c3cad871cda07a52976677e74694a9 WHIRLPOOL f97a2d38023a8f2a14bfdedad0bc0c1c7d7172ff8dbb4a5b483e3d78c72322f2ad0ec57dffb1898cf5aa5002659e70dd49722a20f86ff4e1c2b825e9c52bd28e
-EBUILD samplv1-0.4.1.ebuild 1748 SHA256 0240fa24c8b1efeeb189662ccfbfaeb2d3fd34d2a632953e0f1e05989e2e7f64 SHA512 8b838bac63cbf634994b492fb96e3164e7216d62adfd4c7ed41af1d5bf3a6a04e5ce102324f29cfd13a9abd458d2248200c3cad871cda07a52976677e74694a9 WHIRLPOOL f97a2d38023a8f2a14bfdedad0bc0c1c7d7172ff8dbb4a5b483e3d78c72322f2ad0ec57dffb1898cf5aa5002659e70dd49722a20f86ff4e1c2b825e9c52bd28e
-EBUILD samplv1-0.5.1.ebuild 1748 SHA256 0240fa24c8b1efeeb189662ccfbfaeb2d3fd34d2a632953e0f1e05989e2e7f64 SHA512 8b838bac63cbf634994b492fb96e3164e7216d62adfd4c7ed41af1d5bf3a6a04e5ce102324f29cfd13a9abd458d2248200c3cad871cda07a52976677e74694a9 WHIRLPOOL f97a2d38023a8f2a14bfdedad0bc0c1c7d7172ff8dbb4a5b483e3d78c72322f2ad0ec57dffb1898cf5aa5002659e70dd49722a20f86ff4e1c2b825e9c52bd28e
-EBUILD samplv1-9999.ebuild 1748 SHA256 ee180807ee8059d96d482edf3e8da7f4e111f88b9e047d4dcd8a315fcf432dc8 SHA512 3b0d307dc2386fdf75948e2ad9a52efd9639ec9517af66d9709c1af0b5ecb8a9bf2bb6bad2b16d4234872ebd96d41bc1358e203929a36b64b6e22e46ad41e8fd WHIRLPOOL 3b4517467ea34bea5780b0a208709f387140cf1e78b19344ccd885392392a76f0df7f7c12dbad7556f3f993191347dcf30a690dfe29226d888e7de570e074f68
-MISC ChangeLog 2627 SHA256 92eaf299569246c43101cd7dbde1645b7832d8b28469872a8cd05f7751147068 SHA512 1823ad2c25fa1ab73fb2cc93abde52c7f2b86c9fcfe102dd2459159513ab52235b55560651f34d370727aa98f8e16f99c10a0c2c9dd7068c2df8d5202c7f425e WHIRLPOOL bbfa0347663ce6fdd105afaf80c90fb54b8284235ca24a1adf18c00a16c3e6a0bed182ad8aa26081f302be625db971b656130e52ff84fa39c6b9bfbdc34f24a8
+DIST samplv1-0.6.1.tar.gz 226184 SHA256 08c0a0cae57c93b22d44fb9cc9b13b5080df0990a42eeab4750011a0464950a2 SHA512 708110cc27f7769dc93e4df431ecbd3bafa9f0bcea76d297896c2e5333d7fbcc6a96b2b8ec8e90c073d81c97d7db31edf135cf71c79cd324e1af3cf8fee44a2f WHIRLPOOL fd26614b54c3ac115ba9364edcc3d4959d1b235c08225f4bb04f6bd3d7e484409e6e5acdbcd466a309c7e50cc24a97a4a7e1a832f11c2ebffc1bf8996f1c7d3f
+EBUILD samplv1-0.6.1.ebuild 1941 SHA256 19df76b4502ed3cc8b0b62ef88d685343949978b1e8c75d9a56e12b5f3cec6a0 SHA512 21a52a9ecb226a638c35c94c9bb1891e725977a4485b4f4d8f1f1af613686469c0bd5dd3535641a85ab440377aa47d4a8b94c150b6ab66dad6ad2b1d29ad8071 WHIRLPOOL 70b93fd6ac5478cb39029ae87d35b48f7983a0d58f526aca9c12d0deeb9ab1193ad5b3aeeed83264d06e9b91e708baec49cb2e66f66b6b849e083431606485d6
+EBUILD samplv1-9999.ebuild 1941 SHA256 19df76b4502ed3cc8b0b62ef88d685343949978b1e8c75d9a56e12b5f3cec6a0 SHA512 21a52a9ecb226a638c35c94c9bb1891e725977a4485b4f4d8f1f1af613686469c0bd5dd3535641a85ab440377aa47d4a8b94c150b6ab66dad6ad2b1d29ad8071 WHIRLPOOL 70b93fd6ac5478cb39029ae87d35b48f7983a0d58f526aca9c12d0deeb9ab1193ad5b3aeeed83264d06e9b91e708baec49cb2e66f66b6b849e083431606485d6
+MISC ChangeLog 2947 SHA256 bab8bed3583524c6b465e5e45d57fe88ced52d3dffeff5affc52279388144c32 SHA512 fd9461830fc104e1b4e696cce85f0840c7dc91253ebfd99106b7678de2187417dbb60c63bd53354ef8b86ecf7c8ad8934dad12a915ef763e6e3dc73c5bede8ce WHIRLPOOL 1f5e48d7a7f21368ae7d7afb34e7a6ec18548249e62881563f575e6060008adc717aeafa756066a5110b36374a0b6f108f1d0c06fb2132559ed7acdf0fa0fd17
 MISC metadata.xml 443 SHA256 5e4f2487b24581591d2196bfb8f55855d54003e43d9a1d193427def374e49f0a SHA512 d79095bdea6e89aa6c85edab36e47b085a48f5543aadfc02c026e007b03b3c416448d6d508b68975d8069590f3f6ca4a5ee25e8356c309adf550278d9ac05d22 WHIRLPOOL 247e41d25cf355611945b3350ddb06fae65d2ca63ba9ff49e589e6a573969d64b752607debc80862cbe54e7b6b4d828ffa22646b7adce7af223e6a0c1828c2ab
